--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # From https://github.com/github/gitignore/blob/master/Gradle.gitignore
 .gradle
-.gradle/*
+.gradle/
 /build/
 
 # Ignore Gradle GUI config
