Updated Folder Names

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id "io.freefair.lombok" version "5.0.0-rc6"
     id 'org.openjfx.javafxplugin' version '0.0.10'
 }
-mainClassName = 'edu.wpi.teamname.Main'
+mainClassName = 'edu.wpi.teame.Main'
 
 repositories {
     mavenCentral()
@@ -53,8 +53,8 @@ jar {
 }
 
 def codeCoverageExcludes = [
-        'edu.wpi.teamname.App',
-        'edu.wpi.teamname.Main',
+        'edu.wpi.teame.App',
+        'edu.wpi.teame.Main',
 ]
 
 jacoco {
