--- a/MedicalTrackingApp/build.gradle
+++ b/MedicalTrackingApp/build.gradle
@@ -35,6 +35,13 @@ dependencies {
     )
     implementation 'org.jetbrains:annotations:20.1.0'
 
+    implementation(
+            files("src/libraries/commons-collections4-4.4.jar"),
+            files("src/libraries/commons-beanutils-1.9.4.jar"),
+            files("src/libraries/commons-lang3-3.12.0.jar"),
+            files("src/libraries/commons-text-1.9.jar"),
+            files('src/libraries/opencsv-5.5.2.jar'))
+
     testCompile(
             "org.testfx:testfx-core:4.0.16-alpha",
             'org.junit.jupiter:junit-jupiter:5.6.0',
