--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 MedicalTrackingApp/derby.log
+MedicalTrackingApp/derby.log
+MedicalTrackingApp/build/spotlessJava
