Fixed the formatting of classes

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ Temporary Items
 MedicalTrackingApp/derby.log
 MedicalTrackingApp/derby.log
 MedicalTrackingApp/build/spotlessJava
+MedicalTrackingApp/build/spotlessJava
