Added language, color, accessibility

--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/settings.properties
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/settings.properties
@@ -1,3 +1,6 @@
 #App Settings
-#Sun Feb 13 16:30:19 EST 2022
-dbConnection=Client/Server Database
+#Sun Feb 13 18:15:45 EST 2022
+dbConnection=Embedded Database
+language=
+color=
+accessibility=
