--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/settings.properties
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/settings.properties
@@ -1,6 +1,6 @@
 #App Settings
-#Mon Feb 14 00:08:40 EST 2022
-color=Blue
+#Tue Feb 15 17:44:28 EST 2022
+color=Default
 accessibility=Color Blind Mode
-language=Japanese
+language=English
 dbConnection=Client/Server Database
