--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/settings.properties
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/settings.properties
@@ -1,6 +1,6 @@
 #App Settings
-#Tue Feb 15 17:44:28 EST 2022
+#Tue Feb 15 19:32:48 EST 2022
 color=Default
 accessibility=Color Blind Mode
 language=English
-dbConnection=Client/Server Database
+dbConnection=Embedded Database
