--- a/MedicalTrackingApp/build.gradle
+++ b/MedicalTrackingApp/build.gradle
@@ -42,7 +42,8 @@ dependencies {
             files("src/libraries/commons-beanutils-1.9.4.jar"),
             files("src/libraries/commons-lang3-3.12.0.jar"),
             files("src/libraries/commons-text-1.9.jar"),
-            files('src/libraries/opencsv-5.5.2.jar'))
+            files('src/libraries/opencsv-5.5.2.jar'),
+            files('src/libraries/mssql-jdbc-10.2.0.jre11.jar'))
 
     testCompile(
             "org.testfx:testfx-core:4.0.16-alpha",
