--- a/MedicalTrackingApp/build.gradle
+++ b/MedicalTrackingApp/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
             'org.slf4j:slf4j-api:1.7.30',
             'org.slf4j:slf4j-simple:1.7.30',
+            'org.mongodb:mongodb-driver-sync:4.5.0'
     )
     implementation 'org.jetbrains:annotations:20.1.0'
 
