--- a/MedicalTrackingApp/build.gradle
+++ b/MedicalTrackingApp/build.gradle
@@ -29,6 +29,7 @@ dependencies {
             // You may comment out the database dependency you do not use
             'org.xerial:sqlite-jdbc:3.30.1',
             'org.apache.derby:derby:10.15.2.0',
+            'org.apache.derby:derbyshared:10.15.2.0',
             'org.apache.derby:derbyclient:10.15.2.0',
             'org.apache.derby:derbytools:10.15.2.0',
 
@@ -109,7 +110,9 @@ dependencies {
             files("src/libraries/slf4j-api-1.7.32.jar"),
             files("src/libraries/stax2-api-4.2.1.jar"),
             files("src/libraries/webcam-capture-0.3.12.jar"),
-            files("src/libraries/woodstox-core-6.2.7.jar")
+            files("src/libraries/woodstox-core-6.2.7.jar"),
+            files("src/libraries/Iteration-3-API.jar"),
+            files("src/libraries/CS3733-C22-Team-A-API (1).jar")
     )
 
     testCompile(
